--- a/index.html
+++ b/index.html
@@ -4,38 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCAMSHIELD PRO - Your Digital Guardian</title>
+    <title>SCAMSHIELD PRO - Your Protection Helper</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #030712;
-            color: #f3f4f6;
+            background-color: #0f172a; /* Calm Navy */
+            color: #f8fafc;
             -webkit-font-smoothing: antialiased;
+            font-size: 18px; /* High legibility default */
         }
-        ::-webkit-scrollbar {
-            width: 6px;
+        .btn-massive {
+            height: 80px;
+            font-size: 1.25rem;
+            font-weight: 700;
         }
-        ::-webkit-scrollbar-track {
-            background: #030712;
+        .safe-shadow {
+            box-shadow: 0 20px 50px rgba(16, 185, 129, 0.15);
         }
-        ::-webkit-scrollbar-thumb {
-            background: #1f2937;
-            border-radius: 10px;
+        .caution-shadow {
+            box-shadow: 0 20px 50px rgba(245, 158, 11, 0.15);
         }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #374151;
-        }
-        .glass {
-            background: rgba(17, 24, 39, 0.7);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
+        .scam-shadow {
+            box-shadow: 0 20px 50px rgba(244, 63, 94, 0.15);
         }
         .gradient-text {
-            background: linear-gradient(135deg, #818cf8 0%, #c084fc 100%);
+            background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+        }
+        /* Accessibility Focus States */
+        button:focus, textarea:focus {
+            outline: 4px solid #6366f1;
+            outline-offset: 2px;
         }
     </style>
 <script type="importmap">
